2004-10-05  David Schleef  <ds@schleef.org>

	* Makefile.am: distcheck fixes
	* configure.ac:
	* libswfdec/Makefile.am:

2004-10-05  David Schleef  <ds@schleef.org>

	* TODO: random notes
	* libswfdec/actions.c: (get_actions),
	(swfdec_action_script_execute): minor execution improvements
	* libswfdec/swf.c: (swfdec_decoder_parse),
	(swfdec_decoder_get_tag_func): check for invalid tags
	differently.
	* libswfdec/swfdec_bits.c: (swfdec_bits_get_morph_gradient): add
	function
	* libswfdec/swfdec_bits.h: ditto
	* libswfdec/swfdec_render.c: (swfdec_render_iterate),
	(swfdec_render_get_audio): stop if iterating past end.  Increase
	audio buffer size.
	* libswfdec/swfdec_shape.c: (tag_func_define_shape),
	(tag_define_shape), (tag_define_shape_3), (swf_shape_add_styles),
	(swfdec_gradient_to_palette), (tag_define_morph_shape),
	(swf_shape_ignore_recs), (swf_morphshape_add_styles),
	(swf_morphshape_get_recs): improve debugging.  Add morph shape
	parsing (incomplete)
	* libswfdec/swfdec_shape.h: add protos
	* libswfdec/swfdec_sound.c: (swfdec_sound_mp3_decode),
	(swfdec_sound_mp3_decode_stream): resync more correctly
	* libswfdec/swfdec_sound.h: change buffer size
	* libswfdec/swfdec_sprite.c: (swfdec_sprite_render): decrease
	warning level

2004-10-04  David Schleef  <ds@schleef.org>

	* libswfdec/Makefile.am:
	* libswfdec/swfdec_actions.h: new file

2004-10-04  David Schleef  <ds@schleef.org>

	* libswfdec/Makefile.am: export art_warn
	* libswfdec/actions.c: (tag_func_do_action),
	(swfdec_action_script_execute): minimal AS execution
	* libswfdec/jpeg/huffman.c: switch to swfdec debugging system
	* libswfdec/jpeg/jpeg.c: same.  Check for image overruns when
	decoding macroblocks.
	* libswfdec/jpeg/jpeg_debug.h: same
	* libswfdec/jpeg/test.c: same
	* libswfdec/jpeg/test_rgb.c: same
	* libswfdec/render.c: add debugging
	* libswfdec/swf.c: add debugging.  allocate action buffer array
	* libswfdec/swfdec_buffer.c: quiet debugging.  Add get_offset.