@@ -681,7 +681,7 @@ struct tag_func_struct tag_funcs[] = {
   [ST_GENERATORTEXT] = {"GeneratorText", NULL, 0},
   [ST_FRAMELABEL] = {"FrameLabel", tag_func_frame_label, 0},
   [ST_SOUNDSTREAMHEAD2] = {"SoundStreamHead2", NULL, 0},
-  [ST_DEFINEMORPHSHAPE] = {"DefineMorphShape", tag_define_morph_shape, 0},
+  [ST_DEFINEMORPHSHAPE] = {"DefineMorphShape", NULL /* tag_define_morph_shape */, 0},
   [ST_DEFINEFONT2] = {"DefineFont2", tag_func_define_font_2, 0},
   [ST_TEMPLATECOMMAND] = {"TemplateCommand", NULL, 0},
   [ST_GENERATOR3] = {"Generator3", NULL, 0},
